--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -1,41 +1,110 @@
-.header{
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
+.header {
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(234, 238, 238);
+  /* width: 100%;
+  overflow: hidden; */
 }
-.left{
-    display: flex;
-    justify-content: space-between;
-    width: 56%;
+.headerstyle {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 26px;
+  color: cadetblue;
 }
-.searchbar{
-    display: flex;
-    /* position: relative; */
+.left {
+  display: flex;
+  justify-content: space-between;
+  width: 68%;
+}
+.searchbar {
+  display: flex;
+  padding-top: 25px;
+  /* position: relative; */
 }
 .inputField {
-    width: 35em;
-    height: 2.5em;
-    /* border-radius: 22px; */
+  width: 35em;
+  height: 3.3em;
+  outline: none;
+  border-top: 1px;
+  border-left: 1px;
+  border-right: 1px;
+  /* border-radius: 22px; */
 }
-.Searchicon{
-    height: 20px;
-    width: 3.5em;
-    padding-top: 5px;
+.img {
+  overflow: hidden;
+  
 }
-.icon-border{
-    height: 31px;
-    width: 3.5em;
-    border: 1px solid cadetblue;
-    background-color:rgb(169, 195, 196) ;
+.Searchicon {
+  height: 30px;
+  width: 3.6em;
+  padding-top: 7px;
+}
+.icon-border {
+  height: 44px;
+  width: 3.5em;
+  border: 2px solid rgb(224, 229, 230);
+  background-color: rgb(224, 229, 230);
+  cursor: pointer;
+  border-bottom-color: dimgray;
+}
+.right {
+  width: 10%;
+}
+.Sorticon {
+  height: 20px;
+  width: 20px;
+  padding-right: 20px;
+}
+.image{
+  position: relative;
+}
+.body{
+  margin: 0px 10px 0px 10px;
+}
+.image-gallery{
+     font-size: 16px;
+     color: white;
+     text-decoration: none;
+     border: 1px;
+     width: 40em;
+     padding: 25px;
+     font-family: Arial, Helvetica, sans-serif;
+}
+.backgroundcolor{
+  background-color: black;
+}
+.height{
+  height: 1em;
+}
+.text-style{
+  border-top: 1px solid wheat;
+  border-bottom: 1px solid wheat;
+}
+.cross-img{
+  height: 30px;
+    width: 22px;
+    top: 2em;
+    left: 2em;
+    position: absolute;
     cursor: pointer;
-    /* border-radius: 5px; */
-    
+
 }
-.right{
-    width: 10%;
+.msg{
+  text-align: center;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  color: darkgrey;
 }
-.Sorticon{
-    height: 20px;
-    width: 20px;
-    padding-right: 20px;
+.btn{
+  height: 4em;
+    width: 5em;
+    background-color: cadetblue;
+    border-radius: 3px;
+    outline: none;
+    border: none;
+    color: white;
+    font-weight: bold;
+    font-size: 12px;
+    cursor: pointer;
 }
